src/parsers/snapshots/meshb__parsers__mail_parser__tests__cell_section_parser_should_work.snap
---
source: src/mail_parser.rs
expression: "cell_section(\"POI1  \\n\\nM1 N2   \\nFINSF\")"
---
Ok(
    (
        "",
        Cells(
            [
                CellProp {
                    cell_type: POI1,
                    name: "M1",
                    nodes: [
                        "N2",
                    ],
                },
            ],
        ),
    ),
)
