src/parsers/snapshots/meshb__parsers__mail_parser__tests__cell_section_poi1_ok_1.snap
---
source: src/parsers/mail_parser.rs
expression: "cell_section(\"POI1  \\n\\nM1 N2   \\nFINSF\")"
---
Ok(
    (
        "",
        Cells(
            [
                CellProp {
                    cell_type: POI1,
                    name: Some(
                        "M1",
                    ),
                    nodes: [
                        "N2",
                    ],
                },
            ],
        ),
    ),
)
