src/parsers/snapshots/meshb__parsers__mail_parser__tests__cell_section_poi1_ok_3.snap
---
source: src/parsers/mail_parser.rs
expression: "cell_section(\"POI1  \\n\\nM1 \\n N2   \\nM2 N3\\nFINSF\")"
---
Ok(
    (
        "",
        Cells(
            [
                CellProp {
                    cell_type: POI1,
                    name: Some(
                        "M1",
                    ),
                    nodes: [
                        "N2",
                    ],
                },
                CellProp {
                    cell_type: POI1,
                    name: Some(
                        "M2",
                    ),
                    nodes: [
                        "N3",
                    ],
                },
            ],
        ),
    ),
)
