src/parsers/snapshots/meshb__parsers__mail_parser__tests__cell_section_seg2_ok_1.snap
---
source: src/parsers/mail_parser.rs
expression: "cell_section(\"SEG2\\nM1 N1 N2\\nFINSF\")"
---
Ok(
    (
        "",
        Cells(
            [
                CellProp {
                    cell_type: SEG2,
                    name: "M1",
                    nodes: [
                        "N1",
                        "N2",
                    ],
                },
            ],
        ),
    ),
)
