src/parsers/snapshots/meshb__parsers__mail_parser__tests__cell_type_tag_nook_1.snap
---
source: src/parsers/mail_parser.rs
expression: "cell_type_tag(\"Poi1\")"
---
Err(
    Error(
        Alt(
            [
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "POI1",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "SEG2",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "SEG3",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "SEG4",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "TRIA3",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "TRIA6",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "TRIA7",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "QUAD4",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "QUAD8",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "QUAD9",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "HEXA8",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "HEXA20",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "HEXA27",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "PENTA6",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "PENTA15",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "PENTA18",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "TETRA4",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "TETRA10",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "PYRAM5",
                        ),
                    ),
                },
                Base {
                    location: "Poi1",
                    kind: Expected(
                        Tag(
                            "PYRAM13",
                        ),
                    ),
                },
            ],
        ),
    ),
)
