src/parsers/snapshots/meshb__parsers__mail_parser__tests__cell_type_tag_ok_10.snap
---
source: src/parsers/mail_parser.rs
expression: "cell_type_tag(\"QUAD8\")"
---
Ok(
    (
        "",
        QUAD8,
    ),
)
