src/parsers/snapshots/meshb__parsers__mail_parser__tests__cell_type_tag_ok_11.snap
---
source: src/parsers/mail_parser.rs
expression: "cell_type_tag(\"QUAD9\")"
---
Ok(
    (
        "",
        QUAD9,
    ),
)
